--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,23 @@
         "filament/filament": "^3.2",
         "inertiajs/inertia-laravel": "^1.0",
         "joelbutcher/socialstream": "^6.1",
+        "laravel/folio": "^1.1",
         "laravel/framework": "^11.31",
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-backup": "^9.1",
         "spatie/laravel-permission": "^6.10",
+        "spatie/laravel-sitemap": "^7.3",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.14",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
+        "laravel/telescope": "^5.2",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "pestphp/pest": "^3.7",
