--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME='theWORX'
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://theworx.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -64,3 +64,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+GITHUB_CLIENT=''
+GITHUB_SECRET_KEY=''
+GITHUB_REDIRECT='/oauth/github/callback'
