--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,16 @@
     "require": {
         "php": "^8.2",
         "althinect/filament-spatie-roles-permissions": "^2.2",
+        "diglactic/laravel-breadcrumbs": "^9.0",
         "filament/filament": "^3.2",
         "inertiajs/inertia-laravel": "^1.0",
         "joelbutcher/socialstream": "^6.1",
+        "laravel/cashier": "^15.6",
         "laravel/folio": "^1.1",
         "laravel/framework": "^11.31",
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
+        "laravel/scout": "^10.11",
         "laravel/tinker": "^2.9",
         "spatie/laravel-backup": "^9.1",
         "spatie/laravel-permission": "^6.10",
