--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_DEBUG=true
 APP_TIMEZONE=America/New_York
 APP_URL=http://theworx.test
 
+GITPOD_VITE_URL=
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
