--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^6.0",
+        "vite-plugin-static-copy": "^2.2.0",
         "vue": "^3.3.13"
     },
     "dependencies": {
