--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravel/workos": "^0.1.0",
-        "tightenco/ziggy": "^2.4"
+        "tightenco/ziggy": "^2.4",
+        "workos/workos-php-laravel": "^4.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
